--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=eileenp
-spring.datasource.password=v10l1nG1rl
+spring.datasource.url=jdbc:postgresql://db.iovtllfinizzkshytjzy.supabase.co:5432/postgres
+spring.datasource.username=cs320user
+spring.datasource.password=6C4ADCF3BA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
